--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,66 @@
 .button {
+    font-weight: 600;
+    font-size: 14px;
+    width: 133px;
+    height: 30px;
+    border-radius: 3px;
+    color: #FFFFFF;
+    border: none;
+    padding: 5px 24px;
 }
 
 .disabled {
+    background: #004D99;
+    opacity: 0.5;
+    color: #002E5C;
 }
 
 .secondary {
+    width: 176px;
+    height: 30px;
+    color: #0066CC;
+    border: 1px solid #0066CC;
 }
 
 .default {
+    background: #0066CC;
 }
 
 .red {
+    background: #CC1439;
 }
 
 .default:hover {
+    width: 167px;
+    background: #0080FF;
 }
 
 .red:hover {
+    width: 167px;
+    background: #FF1A47;
 }
 
 .secondary:hover {
+    width: 167px;
+    background: #E5F0FA;
 }
 
 
 .default:active {
+    width: 149px;
+    background: #0059B3;
 }
 
 .secondary:active {
+    width: 149px;
+    background: #C9E5FF;
 }
 
 .red:active {
+    width: 149px;
+    background: #B31232;
 }
 
 .button:disabled {
+
 }
