--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 15px;
 }
 
 .inputs {
@@ -15,6 +16,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    /*margin-bottom: 15px;*/
 }
 
 .checkboxes {
