--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,22 @@
 .burgerMenuIcon {
+    height: 24px;
+    width: 24px;
+    cursor: pointer;
 }
 
 .header {
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+
 }
