--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -7,6 +7,7 @@
     color: #FFFFFF;
     border: none;
     padding: 5px 24px;
+    cursor:pointer;
 }
 
 .disabled {
@@ -31,33 +32,27 @@
 }
 
 .default:hover {
-    width: 167px;
     background: #0080FF;
 }
 
 .red:hover {
-    width: 167px;
     background: #FF1A47;
 }
 
 .secondary:hover {
-    width: 167px;
     background: #E5F0FA;
 }
 
 
 .default:active {
-    width: 149px;
     background: #0059B3;
 }
 
 .secondary:active {
-    width: 149px;
     background: #C9E5FF;
 }
 
 .red:active {
-    width: 149px;
     background: #B31232;
 }
 
