--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,6 @@
 .radio {
+    margin-right: 11px;
+    height: 20px;
 }
 
 .radio::before {
@@ -9,7 +11,18 @@
 }
 
 .label {
+    display: flex;
+    height: 20px;
+    align-items: center;
+    cursor: pointer;
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
+}
+
+.span{
+    display: flex;
+    align-items: center;
 }
