--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -5,12 +5,17 @@
     border: 1px solid #C2C2C2;
     border-radius: 2px;
     margin-right: 110px;
+    cursor: pointer;
 }
 
 .select:focus {
     outline: none;
 }
 
+
+.option{
+    height: 24px;
+}
 
 .option:hover {
     color: #0066CC;
